tests/kyverno/workload/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: new-workload
  labels:
    harborlab.io/tier: workload
